[package]
name = "bep"
version = "0.1.0"
authors = ["Benoit Paquet <benoit.paquet@propfile.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["chrono", "postgres", "uuid", "serde_json"] }
dotenv = "0.14.1"
lazy_static = "1.4"
libreauth = "0.11"
listenfd = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
validator = "0.9"
validator_derive = "0.9"
